Gzipped static assets

--- a/src/view/layout/index.html
+++ b/src/view/layout/index.html
@@ -6,6 +6,7 @@
   <%-link("application.css")%>
 </head>
 <body>
+<%-script("manifest.js")%>
 <%-script("vendors.js")%>
 <%-script("application.js")%>
 
