--- a/src/view/layout/index.html
+++ b/src/view/layout/index.html
@@ -6,9 +6,11 @@
   <%-link("application.css")%>
 </head>
 <body>
-<%-script("manifest.js")%>
-<%-script("vendors.js")%>
-<%-script("application.js")%>
-<%-body%>
+  <% if(process.env.NODE_ENV === 'production'){ %>
+    <%-script("manifest.js")%>
+  <% } %>
+  <%-script("vendors.js")%>
+  <%-script("application.js")%>
+  <%-body%>
 </body>
 </html>
