--- a/src/view/home.ejs
+++ b/src/view/home.ejs
@@ -1,6 +1,6 @@
 <div class="home-page text-center">
   <img src="/images/koa_logo.png" alt="" class="logo">
-  <h2>Welcome Koa boilerplate  <i class="fa fa-thumbs-o-up" aria-hidden="true"></i></h2>
+  <h2>Welcome Koa boilerplate  <i class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></i></h2>
   <a href="./about">Go to about</a>
 </div>
 
