--- a/src/view/layout/index.ejs
+++ b/src/view/layout/index.ejs
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>Koa2 boilerplate-<%=title%></title>
-  <%-link("application.css")%>
+  <link rel="stylesheet" href="<%= asset_path('application.css') %>">
 </head>
 <body>
   <% if(process.env.NODE_ENV === 'production'){ %>
-    <%-script("manifest.js")%>
+    <script src="<%= asset_path('manifest.js') %>"></script>
   <% } %>
-  <%-script("vendors.js")%>
-  <%-script("application.js")%>
+  <script src="<%= asset_path('vendors.js') %>"></script>
+  <script src="<%= asset_path('application.js') %>"></script>
   <%-body%>
 </body>
 </html>
