Add helper middleware for template rendering

--- a/src/assets/stylesheets/page/about.scss
+++ b/src/assets/stylesheets/page/about.scss
@@ -5,7 +5,9 @@
     margin: 30px 0;
   }
 
-  p {
-    margin-bottom: 20px;
+  .logo {
+    width: 375px;
+    display: block;
+    margin: 0 auto;
   }
 }
