--- a/src/view/about.ejs
+++ b/src/view/about.ejs
@@ -1,9 +1,9 @@
 <div class="about-page text-center">
-  <h2>About</h2>
-  <p>Koa boilerplate is very cool</p>
+  <img src="/images/koa_logo.png" alt="Koa boilerplate is very cool" class="logo img-responsive">
+  <h2>Learn about <a href="https://github.com/Cherish-xzw/koa2-boilerplate">Koa boilerplate</a> <i class="glyphicon glyphicon-hand-left"></i></h2>
   <a href="./">Go to home</a>
 </div>
-
+<p class="copyright">Copyright <a href="https://github.com/Cherish-xzw">@travisxu</a> 2016 - <%=moment().format('YYYY')%> all rights reserved.</p>
 <script>
   var about = new About();
 </script>
