--- a/src/assets/stylesheets/page/home.scss
+++ b/src/assets/stylesheets/page/home.scss
@@ -6,8 +6,15 @@
   }
 
   .logo {
-    width: 300px;
+    width: 375px;
     display: block;
     margin: 0 auto;
   }
+}
+.copyright {
+  position: absolute;
+  bottom: 10px;
+  margin: 0 auto;
+  text-align: center;
+  width: 100%;
 }
