--- a/src/view/home.ejs
+++ b/src/view/home.ejs
@@ -1,9 +1,9 @@
 <div class="home-page text-center">
-  <img src="/images/koa_logo.png" alt="" class="logo">
+  <img src="/images/koa_logo.png" alt="Koa boilerplate is very cool" class="logo img-responsive">
   <h2>Welcome Koa boilerplate  <i class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></i></h2>
   <a href="./about">Go to about</a>
 </div>
-
+<p class="copyright">Copyright <a href="https://github.com/Cherish-xzw">@travisxu</a> 2016 - <%=moment().format('YYYY')%> all rights reserved.</p>
 <script>
   var home = new Home();
 </script>
