Add TAF env support

--- a/src/view/home.ejs
+++ b/src/view/home.ejs
@@ -1,4 +1,5 @@
 <div class="home-page text-center" data-page="home">
+  <img src="/static/images/koa_logo.png" class="logo img-responsive"/>
   <i class="logo"></i>
   <h2>Welcome koajs-templates/ejs  <i class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></i></h2>
   <a href="./about">Go to about</a>
