Replace sass with less

--- a/src/assets/stylesheets/page/home.less
+++ b/src/assets/stylesheets/page/home.less
@@ -1,12 +1,12 @@
 .home-page {
   h2 {
-    color: $red;
+    color: @red;
     font-size: 48px;
     margin-bottom: 30px;
   }
 
   .logo {
-    background: url(../images/koa_logo.png);
+    background: url(../../images/koa_logo.png);
     width: 375px;
     display: block;
     margin: 0 auto;
@@ -18,4 +18,10 @@
   margin: 0 auto;
   text-align: center;
   width: 100%;
+}
+.text-center {
+  text-align: center;
+}
+.img-responive {
+  max-width: 100%;
 }
