--- a/src/assets/stylesheets/common/color.less
+++ b/src/assets/stylesheets/common/color.less
@@ -1,4 +1,4 @@
 //global theme name variable, other scss file can use this variable to switch style logic
-$red: red;
-$blue: blue;
-$white: white;
+@red: red;
+@blue: blue;
+@white: white;
